--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Ben Lander</h1>
+    <h3>Full-Stack Web Developer</h3>
   </body>
 </html>
