--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="utf-8">
     <title>Ben Lander | Web Developer</title>
     <script src="app.js" charset="utf-8"></script>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Ben Lander</h1>
-    <h3>Full-Stack Web Developer</h3>
+    <header>
+      <h1>Ben Lander</h1>
+      <h3>Full-Stack Web Developer</h3>
+    </header>
+
+    <main>
+    </main>
+    
+    <footer>
+    </footer>
   </body>
 </html>
