--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ben Lander | Web Developer</title>
     <script src="app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -24,7 +25,24 @@
 
       <div>
         <h3>Technologies</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <i class="devicon-html5-plain"></i>
+        <i class="devicon-css3-plain"></i>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-react-original"></i>
+        <i class="devicon-sass-original"></i>
+
+        <i class="devicon-jquery-plain"></i>
+        <i class="devicon-python-plain"></i>
+        <i class="devicon-git-plain"></i>
+        <i class="devicon-heroku-plain"></i>
+
+        <i class="devicon-mongodb-plain"></i>
+        <i class="devicon-postgresql-plain"></i>
+        <i class="devicon-webpack-plain"></i>
+        <i class="devicon-nodejs-plain"></i>
+
+
+
       </div>
 
       <hr>
