--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <main>
 
       <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>
+          I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
+        </p>
+
+        <p>
+          I am looking to join a company where I can be part of a collaborative team and continue my learning, while contributing to my team’s progress in a meaningful way.
+        </p>
       </div>
 
       <hr>
@@ -40,15 +46,92 @@
         <i class="devicon-postgresql-plain"></i>
         <i class="devicon-webpack-plain"></i>
         <i class="devicon-nodejs-plain"></i>
-
-
-
       </div>
 
       <hr>
 
       <div>
         <h3>Work</h3>
+
+        <div class="project">
+
+          <div class="projectcontent">
+            <h3>Whiskypedia</h3>
+            <p>
+              Whiskypedia is a full-stack app designed to allow whisky enthusiasts to keep track of whiskies they have tried, distilleries they have visited, and receive recommendations of whiskies they may like.
+            </p>
+            <p>
+              The app is a React front-end paired with a Python back-end. The back end uses SQLAlchemy to communicate with PostgreSQL database. I chose to create this app as a solo project in order to push myself to create a full-stack application in the allotted time frame.
+            </p>
+            <p>
+              Full details can be found in the Readme in GitHub.
+            </p>
+          </div>
+
+
+          <div class="projectimage">
+            <img src="/" alt="Whiskypedia Screenshot">
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="projectimage">
+            <img src="/" alt="Brain Training Screenshot">
+          </div>
+
+          <div class="projectcontent">
+            <h3>Brain Training</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p>
+              Full details can be found in the Readme in GitHub.
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="projectcontent">
+            <h3>Brain Training</h3>
+            <p>
+              This project was a hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the Open Trivia Database API.
+            </p>
+            <p>
+              We designed the app to pull in a set of questions from the API, then randomise the position of the correct answer in an array of incorrect answers. This project was pair-coded throughout, rather than using Git collaboration features. We used Trello to document ideas along with acting as a to-do list.
+            </p>
+            <p>
+              Full details can be found in the Readme in GitHub.
+            </p>
+          </div>
+
+          <div class="projectimage">
+            <img src="/" alt="Space Invaders Screenshot">
+          </div>
+        </div>
+
+        <div class="project">
+
+          <div class="projectimage">
+            <img src="/" alt="Space Invaders Screenshot">
+          </div>
+
+          <div class="projectcontent">
+            <h3>Space Invaders</h3>
+            <p>
+              A front end game, written with JavaScript & jQuery. The brief was to create a grid-based game in a time frame of seven days. I chose to recreate the arcade classic Space Invaders for this project.
+            </p>
+            <p>
+              I approached this project by creating a Trello board to contain every idea I had for the game. I then sorted the Trello board according to the MuSCoW method to give me a clear structure for each day of the project.
+            </p>
+            <p>
+              Full details can be found in the Readme in GitHub.
+            </p>
+          </div>
+        </div>
+
       </div>
 
     </main>
