--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
 
           <div class="project-content has-text-right">
-            <h3>Brain Training</h3>
+            <h3>Created</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -114,14 +114,14 @@
           </div>
 
           <div class="project-image">
-            <img src="/" alt="Space Invaders Screenshot">
+            <img src="/" alt="Brain Training Screenshot">
           </div>
         </section>
 
         <section class="project">
 
           <div class="project-image">
-            <img src="/" alt="Space Invaders Screenshot">
+            <img src="assets/space-invaders-animated.gif" alt="Space Invaders Screenshot">
           </div>
 
           <div class="project-content has-text-right">
