Added image to project 4

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h1>Ben Lander</h1>
       <h2>Full-Stack Web Developer</h2>
       <div class="cta-icons">
-        <i class="fab fa-github-square"></i>
-        <i class="far fa-envelope"></i>
-        <i class="fab fa-linkedin"></i>
-      </div>
+        <a href="https://github.com/benleolander" target="_blank"><i class="fab fa-github-square"></i></a>
+        <a href="mailto:ben@benlander.me"><i class="far fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/ben-lander/" target="_blank"><i class="fab fa-linkedin"></i>
+      </div></a>
 
       <a href="#main"><i class="fas fa-angle-down down-chevron"></i></a>
     </header>
@@ -75,7 +75,7 @@
           </div>
 
           <div class="project-image">
-            <img src="/" alt="Whiskypedia Screenshot">
+            <img src="assets/whiskypedia.png" alt="Whiskypedia Screenshot">
           </div>
 
         </section>
@@ -106,7 +106,7 @@
               This project was a hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the Open Trivia Database API.
             </p>
             <p>
-              We designed the app to pull in a set of questions from the API, then randomise the position of the correct answer in an array of incorrect answers. This project was pair-coded throughout, rather than using Git collaboration features. We used Trello to document ideas along with acting as a to-do list.
+              We designed the app to pull in a set of questions from the API, then randomise the position of the correct answer in an array of incorrect answers. This project was pair-coded throughout, rather than using Git collaboration features. We used Trello to document ideas as well as a to-do list.
             </p>
             <p>
               Full details can be found in the Readme in GitHub.
