Added go-further links to each project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="about-container">
         <div class="about-bio">
           <p>
-            I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
+            Hi! I'm Ben, a London-based web developer. I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
           </p>
 
           <p>
@@ -40,7 +40,9 @@
           <div class="technologies-icons">
             <i class="devicon-html5-plain"></i>
             <i class="devicon-css3-plain"></i>
+
             <i class="devicon-javascript-plain"></i>
+
             <i class="devicon-react-original"></i>
             <i class="devicon-sass-original"></i>
 
@@ -72,6 +74,11 @@
             <p>
               Full details can be found in the Readme in GitHub.
             </p>
+
+            <div class="go-further-links">
+              <a class="go-futher-button">View Project</a>
+              <a class="go-futher-button">View on GitHub</a>
+            </div>
           </div>
 
           <div class="project-image">
@@ -82,20 +89,28 @@
 
         <section class="project">
           <div class="project-image">
-            <img src="/" alt="Brain Training Screenshot">
+            <img src="assets/created.png" alt="Created Screenshot">
           </div>
 
           <div class="project-content has-text-right">
             <h3>Created</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Created is a full-stack MERN app, designed to allow domestic creatives to showcase their creations and be contacted by potential clients. This was a group project, designed to cement knowledge of API development, along with collaboration using Git & GitHub.
             </p>
+
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              To start development, and allow front-end and back-end development to run simultaneously, we created a set of 'dummy data' that both front-end and back-end development groups used as a central source of truth. By effectively planning out with wireframes each API end-point and what data it should return, we were able to begin working on the front & back ends simultaneously, using Trello to collaborate.
             </p>
+
             <p>
               Full details can be found in the Readme in GitHub.
             </p>
+
+            <div class="go-further-links">
+              <a class="go-futher-button">View Project</a>
+              <a class="go-futher-button">View on GitHub</a>
+            </div>
+
           </div>
         </section>
 
@@ -103,7 +118,7 @@
           <div class="project-content has-text-left">
             <h3>Brain Training</h3>
             <p>
-              This project was a hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the Open Trivia Database API.
+              This project was a 48-hour hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the Open Trivia Database API.
             </p>
             <p>
               We designed the app to pull in a set of questions from the API, then randomise the position of the correct answer in an array of incorrect answers. This project was pair-coded throughout, rather than using Git collaboration features. We used Trello to document ideas as well as a to-do list.
@@ -111,10 +126,16 @@
             <p>
               Full details can be found in the Readme in GitHub.
             </p>
+
+            <div class="go-further-links">
+              <a class="go-futher-button">View Project</a>
+              <a class="go-futher-button">View on GitHub</a>
+            </div>
+
           </div>
 
-          <div class="project-image">
-            <img src="/" alt="Brain Training Screenshot">
+          <div class="project-image ">
+            <img src="assets/brain-training.png" alt="Brain Training Screenshot">
           </div>
         </section>
 
@@ -135,6 +156,12 @@
             <p>
               Full details can be found in the Readme in GitHub.
             </p>
+
+            <div class="go-further-links">
+              <a class="go-further-button">View Project</a>
+              <a class="go-further-button">View on GitHub</a>
+            </div>
+
           </div>
         </div>
 
