--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-futher-button">View Project</a>
-              <a class="go-futher-button">View on GitHub</a>
+              <a class="go-further-button">View Project</a>
+              <a class="go-further-button">View on GitHub</a>
             </div>
           </div>
 
@@ -107,8 +107,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-futher-button">View Project</a>
-              <a class="go-futher-button">View on GitHub</a>
+              <a class="go-further-button">View Project</a>
+              <a class="go-further-button">View on GitHub</a>
             </div>
 
           </div>
@@ -128,8 +128,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-futher-button">View Project</a>
-              <a class="go-futher-button">View on GitHub</a>
+              <a class="go-further-button">View Project</a>
+              <a class="go-further-button">View on GitHub</a>
             </div>
 
           </div>
