--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-further-button">View Project</a>
-              <a class="go-further-button">View on GitHub</a>
+              <a href="http://whiskypedia.herokuapp.com" class="go-further-button">View Project</a>
+              <a href="https://github.com/benleolander/WDI-Project-4" class="go-further-button">View on GitHub</a>
             </div>
           </div>
 
@@ -107,8 +107,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-further-button">View Project</a>
-              <a class="go-further-button">View on GitHub</a>
+              <a href="http://created-wdi.herokuapp.com" class="go-further-button">View Project</a>
+              <a href="https://github.com/benleolander/WDI-Project-3" class="go-further-button">View on GitHub</a>
             </div>
 
           </div>
@@ -128,8 +128,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-further-button">View Project</a>
-              <a class="go-further-button">View on GitHub</a>
+              <a href="https://react-braintraining.herokuapp.com" class="go-further-button">View Project</a>
+              <a href="https://github.com/benleolander/WDI-Project-2"class="go-further-button">View on GitHub</a>
             </div>
 
           </div>
@@ -158,8 +158,8 @@
             </p>
 
             <div class="go-further-links">
-              <a class="go-further-button">View Project</a>
-              <a class="go-further-button">View on GitHub</a>
+              <a href="http://benlander.me/WDI-Project-1/"class="go-further-button">View Project</a>
+              <a href="https://github.com/benleolander/WDI-Project-1"class="go-further-button">View on GitHub</a>
             </div>
 
           </div>
