--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section class="project">
 
           <div class="project-image">
-            <img src="assets/space-invaders-animated.gif" alt="Space Invaders Screenshot">
+            <img src="assets/space-invaders-animated.gif" alt="Animated Space Invaders Screenshot">
           </div>
 
           <div class="project-content has-text-right">
