Refactored Technologies icons into divs for better future expansion

--- a/index.html
+++ b/index.html
@@ -38,23 +38,57 @@
         <div class="about-technologies">
           <h2>Technologies</h2>
           <div class="technologies-icons">
-            <i class="devicon-html5-plain"></i>
-            <i class="devicon-css3-plain"></i>
+            <div>
+              <i class="devicon-html5-plain"></i>
+            </div>
 
-            <i class="devicon-javascript-plain"></i>
+            <div>
+              <i class="devicon-css3-plain"></i>
+            </div>
 
-            <i class="devicon-react-original"></i>
-            <i class="devicon-sass-original"></i>
+            <div>
+              <i class="devicon-javascript-plain"></i>
+            </div>
 
-            <i class="devicon-jquery-plain"></i>
-            <i class="devicon-python-plain"></i>
-            <i class="devicon-git-plain"></i>
-            <i class="devicon-heroku-plain"></i>
+            <div>
+              <i class="devicon-react-original"></i>
+            </div>
 
-            <i class="devicon-mongodb-plain"></i>
-            <i class="devicon-postgresql-plain"></i>
-            <i class="devicon-webpack-plain"></i>
-            <i class="devicon-nodejs-plain"></i>
+            <div>
+              <i class="devicon-sass-original"></i>
+            </div>
+
+            <div>
+              <i class="devicon-jquery-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-python-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-git-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-heroku-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-mongodb-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-postgresql-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-webpack-plain"></i>
+            </div>
+
+            <div>
+              <i class="devicon-nodejs-plain"></i>
+            </div>
           </div>
         </div>
       </div>
