Added icon captions

--- a/index.html
+++ b/index.html
@@ -45,50 +45,82 @@
 
             <div>
               <i class="devicon-css3-plain"></i>
+              <span class="technologies-icons-caption">CSS</span>
             </div>
 
             <div>
               <i class="devicon-javascript-plain"></i>
+              <span class="technologies-icons-caption">JavaScript</span>
             </div>
 
             <div>
               <i class="devicon-react-original"></i>
+              <span class="technologies-icons-caption">React</span>
             </div>
 
             <div>
               <i class="devicon-sass-original"></i>
+              <span class="technologies-icons-caption">SASS</span>
             </div>
 
             <div>
               <i class="devicon-jquery-plain"></i>
+              <span class="technologies-icons-caption">jQuery</span>
             </div>
 
             <div>
               <i class="devicon-python-plain"></i>
+              <span class="technologies-icons-caption">Python</span>
+            </div>
+
+            <div>
+              <i class="devicon-mocha-plain"></i>
+              <span class="technologies-icons-caption">Mocha</span>
             </div>
 
             <div>
               <i class="devicon-git-plain"></i>
+              <span class="technologies-icons-caption">Git</span>
+            </div>
+
+            <div>
+              <i class="devicon-github-plain"></i>
+              <span class="technologies-icons-caption">GitHub</span>
             </div>
 
             <div>
               <i class="devicon-heroku-plain"></i>
+              <span class="technologies-icons-caption">Heroku</span>
             </div>
 
             <div>
               <i class="devicon-mongodb-plain"></i>
+              <span class="technologies-icons-caption">Mongo DB</span>
             </div>
 
             <div>
               <i class="devicon-postgresql-plain"></i>
+              <span class="technologies-icons-caption">PostgreSQL</span>
             </div>
 
             <div>
               <i class="devicon-webpack-plain"></i>
+              <span class="technologies-icons-caption">Webpack</span>
+            </div>
+
+            <div>
+              <i class="devicon-babel-plain"></i>
+              <span class="technologies-icons-caption">Babel</span>
             </div>
 
             <div>
               <i class="devicon-nodejs-plain"></i>
+              <span class="technologies-icons-caption">Node.js</span>
+            </div>
+
+            <div>
+              <i class="devicon-express-original"></i>
+              <span class="technologies-icons-caption">Express</span>
             </div>
           </div>
         </div>
