Added transition to icon captions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="technologies-icons">
             <div>
               <i class="devicon-html5-plain"></i>
-              <span class="technologies-icons-caption">HTML 5</span>
+              <span class="technologies-icons-caption">HTML</span>
             </div>
 
             <div>
