Added anchor tags crediting external APIs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
 
     <header>
@@ -186,7 +186,7 @@
           <div class="project-content has-text-left">
             <h3>Brain Training</h3>
             <p>
-              This project was a 48-hour hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the Open Trivia Database API.
+              This project was a 48-hour hackathon designed to cement knowledge of React and external APIs. Working as a pair, we created a pub quiz style trivia game using the <a href="https://opentdb.com">Open Trivia Database API.</a>
             </p>
             <p>
               We designed the app to pull in a set of questions from the API, then randomise the position of the correct answer in an array of incorrect answers. This project was pair-coded throughout, rather than using Git collaboration features. We used Trello to document ideas as well as a to-do list.
