--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
     </main>
 
     <footer>
-      <!-- Footer Content goes here -->
+      <p class="footer-content">Get in touch via <a href="mailto:ben@benlander.me">email</a>, <a href="https://www.linkedin.com/in/ben-lander/" target="_blank">LinkedIn</a> or <a href="https://github.com/benleolander" target="_blank">GitHub</a>.</p>
+
+      <p class="copyright-tag">&copy; 2019 Ben Lander</p>
     </footer>
   </body>
 
