--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </p>
 
           <p>
-            I'm currently working as a Python developer for <a href="https://natoora.co.uk" target="_blank">Natoora</a>.
+            I'm currently working as a Python developer for <a href="https://www.natoora.co.uk" target="_blank">Natoora</a>.
           </p>
         </div>
 
