Added additional devicons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,31 @@
             </div>
 
             <div>
+              <i class="devicon-python-plain"></i>
+              <span class="technologies-icons-caption">Python</span>
+            </div>
+
+            <div>
+              <i class="devicon-pycharm-plain"></i>
+              <span class="technologies-icons-caption">Pycharm</span>
+            </div>
+
+            <div>
+              <i class="devicon-django-plain"></i>
+              <span class="technologies-icons-caption">Django</span>
+            </div>
+
+            <div>
+              <i class="devicon-docker-plain"></i>
+              <span class="technologies-icons-caption">Docker</span>
+            </div>
+
+            <div>
+              <i class="devicon-redis-plain"></i>
+              <span class="technologies-icons-caption">Redis</span>
+            </div>
+
+            <div>
               <i class="devicon-sass-original"></i>
               <span class="technologies-icons-caption">SASS</span>
             </div>
@@ -58,11 +83,6 @@
             <div>
               <i class="devicon-jquery-plain"></i>
               <span class="technologies-icons-caption">jQuery</span>
-            </div>
-
-            <div>
-              <i class="devicon-python-plain"></i>
-              <span class="technologies-icons-caption">Python</span>
             </div>
 
             <div>
@@ -98,6 +118,11 @@
             <div>
               <i class="devicon-webpack-plain"></i>
               <span class="technologies-icons-caption">Webpack</span>
+            </div>
+
+            <div>
+              <i class="devicon-grunt-plain"></i>
+              <span class="technologies-icons-caption">Grunt</span>
             </div>
 
             <div>
