Added devicon attribution to footer

--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
     <footer>
       <p class="footer-content">Get in touch via <a href="mailto:ben@benlander.me">email</a>, <a href="https://www.linkedin.com/in/ben-lander/" target="_blank">LinkedIn</a> or <a href="https://github.com/benleolander" target="_blank">GitHub</a>.</p>
 
-      <p class="copyright-tag">&copy; 2019 Ben Lander</p>
+      <p class="copyright-tag">Copyright &copy; 2020 Ben Lander</p>
+      <p class="copyright-tag"><i class="devicon-devicon-plain"></i> <a href="http://konpa.github.io/devicon/">Devicon</a> Copyright &copy; 2015 <a href="https://github.com/konpa">Konpa</a></p>
     </footer>
   </body>
 
