--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="styles/light.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="styles/dark.css" media="(prefers-color-scheme: dark)"> -->
+    <link rel="stylesheet" href="styles/style.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <!-- <script src="script.js" charset="utf-8"></script> -->
 
   </head>
@@ -17,7 +19,7 @@
   <body>
 
     <header>
-      <button class="themeToggle">Toggle Theme</button>
+      <!-- <button class="themeToggle">Toggle Theme</button> -->
       <h1>Ben Lander</h1>
       <h2>Full-Stack Web Developer</h2>
       <div class="cta-icons">
@@ -277,7 +279,7 @@
     </footer>
   </body>
 
-  <script>
+  <!-- <script>
   const root = document.documentElement
   let lightMode = false
     $('.themeToggle').on('click', () => {
@@ -298,6 +300,6 @@
     })
 
 
-  </script>
+  </script> -->
 
 </html>
