--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <header>
-      <!-- <button class="themeToggle">Toggle Theme</button> -->
+      <button class="themeToggle">Toggle Theme</button>
       <h1>Ben Lander</h1>
       <h2>Full-Stack Web Developer</h2>
       <div class="cta-icons">
@@ -279,27 +279,16 @@
     </footer>
   </body>
 
-  <!-- <script>
-  const root = document.documentElement
-  let lightMode = false
-    $('.themeToggle').on('click', () => {
-      if(!lightMode) {
-        lightMode = true
-        root.style.setProperty('--background-color', '#ccc')
-        root.style.setProperty('--primary-color', 'orange')
-        root.style.setProperty('--primary-color-hover', 'orange')
-        root.style.setProperty('--text-color', 'black')
-      }
-      else if(lightMode) {
-        lightMode = false
-        root.style.setProperty('--background-color', 'hsl(227, 26%, 11%)')
-        root.style.setProperty('--primary-color', 'hsl(168, 99%, 58%)')
-        root.style.setProperty('--primary-color-hover', 'hsl(168, 99%, 33%)')
-        root.style.setProperty('--text-color', '#ccc')
-      }
-    })
+  <script>
 
+    const themeButton = document.querySelector(".themeToggle")
 
-  </script> -->
+    function toggleTheme() {
+      !document.documentElement.hasAttribute("theme") ? document.documentElement.setAttribute("theme", "light") : document.documentElement.removeAttribute("theme")
+    }
+
+    themeButton.addEventListener('click', toggleTheme)
+
+  </script>
 
 </html>
