Refactored JS out of .html file

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="styles/light.css" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="styles/dark.css" media="(prefers-color-scheme: dark)"> -->
     <link rel="stylesheet" href="styles/style.css">
-
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <!-- <script src="script.js" charset="utf-8"></script> -->
 
   </head>
 
@@ -277,18 +272,6 @@
       <p class="copyright-tag">Copyright &copy; 2020 Ben Lander</p>
       <p class="copyright-tag"><i class="devicon-devicon-plain"></i> <a href="http://konpa.github.io/devicon/">Devicon</a> Copyright &copy; 2015 <a href="https://github.com/konpa">Konpa</a></p>
     </footer>
+    <script src="app.js" charset="utf-8"></script>
   </body>
-
-  <script>
-
-    const themeButton = document.querySelector(".themeToggle")
-
-    function toggleTheme() {
-      !document.documentElement.hasAttribute("theme") ? document.documentElement.setAttribute("theme", "light") : document.documentElement.removeAttribute("theme")
-    }
-
-    themeButton.addEventListener('click', toggleTheme)
-
-  </script>
-
 </html>
