Replaced button element with a toggle slider

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <body>
 
     <header>
-      <button class="themeToggle">Toggle Theme</button>
+      <label class="switch">
+        <input type="checkbox" class="themeToggle">
+        <span class="slider round"></span>
+      </label>
+
       <h1>Ben Lander</h1>
       <h2>Full-Stack Web Developer</h2>
       <div class="cta-icons">
