Fixing html tag

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="cta-icons">
         <a href="https://github.com/benleolander" target="_blank"><i class="fab fa-github-square"></i></a>
         <a href="mailto:ben@benlander.me"><i class="far fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/ben-lander/" target="_blank"><i class="fab fa-linkedin"></i>
-      </div></a>
+        <a href="https://www.linkedin.com/in/ben-lander/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
 
       <a href="#main"><i class="fas fa-angle-down down-chevron"></i></a>
     </header>
