--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 
         <div class="about-bio">
           <p>
-            Hi! I'm Ben, a London-based web developer. I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
+            Hi! I'm Ben, a London-based full-stack developer. I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
           </p>
 
           <p>
-            I'm currently working as a Python developer for <a href="https://www.natoora.co.uk" target="_blank">Natoora</a>.
+            I'm currently working as a software engineer for <a href="https://www.natoora.co.uk" target="_blank">Natoora</a>.
           </p>
         </div>
 
