Removed unneeded round class from HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <label class="switch">
         <input type="checkbox" class="themeToggle">
-        <span class="slider round"></span>
+        <span class="slider"></span>
       </label>
 
       <h1>Ben Lander</h1>
