HTML tags added for switch glyphs

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   <body>
 
     <header>
-      <label class="switch">
-        <input type="checkbox" class="themeToggle">
-        <span class="slider"></span>
-      </label>
+      <div class="switch-container">
+        <img src="./assets/icons/light-mode-glyph.svg" alt="Light mode glyph"/>
+        <label class="switch">
+          <input type="checkbox" class="themeToggle">
+          <span class="slider"></span>
+        </label>
+        <img src="./assets/icons/dark-mode-glyph.svg" alt="Dark mode glyph"/>
+      </div>
 
       <h1>Ben Lander</h1>
       <h2>Full-Stack Web Developer</h2>
