--- a/index.html
+++ b/index.html
@@ -15,12 +15,100 @@
 
     <header>
       <div class="switch-container">
-        <img src="./assets/icons/light-mode-glyph.svg" alt="Light mode glyph"/>
+        <svg id="dark-mode-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="292.548px" height="292.548px" viewBox="0 0 292.548 292.548" xml:space="preserve">
+        <g>
+          <path d="M4.854,171.952c19.037,43.423,62.392,73.76,112.843,73.76c68.021,0,123.161-55.14,123.161-123.161
+          C240.858,58.673,192.23,6.158,129.97,0c29.061,19.009,48.261,51.833,48.261,89.152c0,58.799-47.662,106.462-106.461,106.462
+          C46.415,195.614,23.137,186.747,4.854,171.952L4.854,171.952z"/>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+      </svg>
         <label class="switch">
           <input type="checkbox" class="themeToggle">
           <span class="slider"></span>
         </label>
-        <img src="./assets/icons/dark-mode-glyph.svg" alt="Dark mode glyph"/>
+        <svg id="light-mode-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="292.548px" height="292.548px" viewBox="0 0 292.548 292.548"
+        xml:space="preserve">
+        <g>
+          <path d="M221.253,146.83c0,39.842-32.396,72.231-72.223,72.231c-39.839,0-72.238-32.401-72.238-72.231
+          c0-39.833,32.405-72.231,72.238-72.231C188.851,74.598,221.253,107.002,221.253,146.83z M149.03,47.105
+          c3.984,0,7.221-3.239,7.221-7.224V9.776c0-3.996-3.23-7.224-7.221-7.224c-3.996,0-7.23,3.233-7.23,7.224v30.105
+          C141.8,43.866,145.028,47.105,149.03,47.105z M220.917,83.821c1.849,0,3.698-0.703,5.104-2.114l25.881-25.875
+          c2.822-2.832,2.822-7.41,0-10.226c-2.822-2.811-7.386-2.811-10.208,0l-25.881,25.887c-2.822,2.828-2.822,7.397,0,10.214
+          C217.224,83.119,219.067,83.821,220.917,83.821z M60.504,81.708c1.414,1.405,3.267,2.114,5.104,2.114
+          c1.853,0,3.702-0.703,5.116-2.114c2.822-2.822,2.822-7.386,0-10.214L44.832,45.607c-2.822-2.811-7.386-2.811-10.208,0
+          c-2.822,2.822-2.822,7.395,0,10.226L60.504,81.708z M143.263,245.447c-3.99,0-7.218,3.242-7.218,7.224v30.102
+          c0,3.987,3.233,7.224,7.218,7.224s7.232-3.23,7.232-7.224V252.67C150.495,248.689,147.253,245.447,143.263,245.447z M66.26,210.847
+          l-25.88,25.88c-2.822,2.822-2.822,7.398,0,10.208c1.414,1.412,3.267,2.12,5.116,2.12c1.852,0,3.69-0.702,5.104-2.12l25.881-25.88
+          c2.822-2.822,2.822-7.398,0-10.208C73.658,208.031,69.082,208.031,66.26,210.847z M231.785,210.847
+          c-2.822-2.816-7.392-2.816-10.214,0c-2.822,2.822-2.822,7.386,0,10.208l25.881,25.88c1.41,1.412,3.26,2.12,5.115,2.12
+          c1.85,0,3.688-0.702,5.099-2.12c2.822-2.822,2.822-7.386,0-10.208L231.785,210.847z M46.96,146.83c0-3.996-3.249-7.224-7.233-7.224
+          H7.218c-3.99,0-7.218,3.228-7.218,7.224c0,3.993,3.233,7.224,7.218,7.224h32.51C43.718,154.053,46.96,150.823,46.96,146.83z
+          M285.324,139.606h-38.527c-3.987,0-7.218,3.228-7.218,7.224c0,3.993,3.23,7.224,7.218,7.224h38.527
+          c3.987,0,7.224-3.23,7.224-7.224C292.548,142.833,289.312,139.606,285.324,139.606z"/>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+        <g>
+        </g>
+      </svg>
       </div>
 
       <h1>Ben Lander</h1>
