--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="switch-container">
         <svg id="dark-mode-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        width="292.548px" height="292.548px" viewBox="0 0 292.548 292.548" xml:space="preserve">
+        width="3.5rem" height="3rem" viewBox="0 0 292.548 292.548" xml:space="preserve">
         <g>
           <path d="M4.854,171.952c19.037,43.423,62.392,73.76,112.843,73.76c68.021,0,123.161-55.14,123.161-123.161
           C240.858,58.673,192.23,6.158,129.97,0c29.061,19.009,48.261,51.833,48.261,89.152c0,58.799-47.662,106.462-106.461,106.462
@@ -57,8 +57,8 @@
           <input type="checkbox" class="themeToggle">
           <span class="slider"></span>
         </label>
-        <svg id="light-mode-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        width="292.548px" height="292.548px" viewBox="0 0 292.548 292.548"
+        <svg id="light-mode-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="3.5rem" height="3rem" viewBox="0 0 292.548 292.548"
         xml:space="preserve">
         <g>
           <path d="M221.253,146.83c0,39.842-32.396,72.231-72.223,72.231c-39.839,0-72.238-32.401-72.238-72.231
