--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport" />
     <title>Ben Lander | Web Developer</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.9.0/devicon.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -147,6 +147,11 @@
               <i class="devicon-react-original"></i>
               <span class="technologies-icons-caption">React</span>
             </div>
+            
+            <div>
+              <i class="devicon-redux-original"></i>
+              <span class="technologies-icons-caption">Redux</span>
+            </div>
 
             <div>
               <i class="devicon-python-plain"></i>
@@ -183,10 +188,6 @@
               <span class="technologies-icons-caption">Git</span>
             </div>
 
-            <div>
-              <i class="devicon-github-plain"></i>
-              <span class="technologies-icons-caption">GitHub</span>
-            </div>
 
             <div>
               <i class="devicon-heroku-plain"></i>
