--- a/index.html
+++ b/index.html
@@ -356,6 +356,6 @@
 
       <p class="copyright-tag">Copyright &copy; 2018-2021 Ben Lander</p>
     </footer>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="app.js"></script>
   </body>
 </html>
