--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="about-bio">
           <p>
-            Hi! I'm Ben, a London-based full-stack developer. I have always had a passion for computers & technology, whether building or fixing them. I was first introduced to coding while working alongside the development teams at Apple, and it immediately grabbed my attention. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
+            Hi! I'm Ben, a London-based full-stack developer. I have always had a passion for computers & technology, whether building or fixing them. While I enjoyed the problem solving and technical learning aspects of my previous roles, I wanted to take these skills further, leading me to enrol in the Web Development Immersive course at General Assembly.
           </p>
 
           <!-- <p>
@@ -356,7 +356,7 @@
     <footer>
       <p class="footer-content">Get in touch via <a href="mailto:ben@benlander.me">email</a>, <a href="https://www.linkedin.com/in/ben-lander/" target="_blank">LinkedIn</a> or <a href="https://github.com/benleolander" target="_blank">GitHub</a>.</p>
 
-      <p class="copyright-tag">Copyright &copy; 2018-2024 Ben Lander</p>
+      <p class="copyright-tag">Copyright &copy; 2018-2025 Ben Lander</p>
     </footer>
   </body>
 </html>
